[package]
name = "print_typewriter"
version = "0.1.2"
edition = "2021"
authors = ["TheMrGong"]
description = "Provides an easy way to print strings on character at a time."
license = "WTFPL"
repository = "https://github.com/TheMrGong/print_typewriter"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
